javascript basic operators and functions

--- a/JavaScript/test.html
+++ b/JavaScript/test.html
@@ -5,7 +5,7 @@
     <title>Javascript Learning</title>
 </head>
 <body>
-    <h1>Welcome to JavaScript</h1>
+    <h1 id="header">Welcome to JavaScript</h1>
     <script src="jstest.js"></script>
     <script src="one.js"></script>
 </body>    
