--- a/Java-Script/Variable.html
+++ b/Java-Script/Variable.html
@@ -1,14 +1,18 @@
 <html>
 <body>
 <script>  
-var value=50;//global variable  
-function a()
-{
- var m=100;
- document.write(m);  
-alert(value);  
+var data=17;//gloabal variable  
+function a(){  
+document.writeln(data);  
 }  
-a();
+function b(){  
+document.writeln(data);  
+}  
+a();//calling JavaScript function
+b();
+  
 </script>  
 </body>
 </html>
+
+ 
